feat: add manipulação de DOM

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Chat de mensagens</title>
 </head>
-<body class="body-father">
+<body class="body_father">
     <div class="container">
         <h1 class="title">Histórico de Mensagens</h1>
         <form class="formulario">
-            <textarea placeholder="Digite a mensagem..." class="input-mensagem"></textarea>
-            <input type="submit" class="btn-enviar" value="Enviar">
+            <textarea placeholder="Digite a mensagem..." class="input_mensagem"></textarea>
+            <input type="submit" class="btn_enviar" value="Enviar">
         </form>
     </div>
 </body>
